[tool.poetry]
name = "antragsteller"
version = "1.0.0"
description = "All-in-one TelegramⓇ bot: chat moderation, continuous and scheduled notifications, and more!"
authors = ["Egor <fureunoir> Gorbunov <contact@fureunoir.com>"]
license = "Apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
redis = "^4.6.0"
celery = { version = "^5.4.0", optional = true }
poetry-core = "^1.9.0"
pillow = "^11.0.0"
requests = "^2.32.3"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
motor = "^3.1.0"
aiogram = "^3.0.0"
fastapi = "^0.115.2"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
openai = { version = "^1.51.0", optional = true }
loguru = "^0.7.0"
httpx = "^0.27.2"
fastapi-versioning = "^0.10.0"
tortoise-orm = "^0.21.7"
aerich = "^0.7.1"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.10.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
watchfiles = "^0.24.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.16.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}

[tool.poetry.extras]
worker = ["celery"]
AI = ["openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
